--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CatPhotoApp</title>
+    <title>CAT PHOTO APP</title>
 </head>
   <body>
     <main>
